Dummy_Package_for_scratch_org/main/default/objects/MC_Result__e/fields/IsFinished__c.field-meta.xml
<CustomField>
    <fullName>IsFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finished</label>
    <type>Checkbox</type>
</CustomField>