Dummy_Package_for_scratch_org/main/default/objects/MC_Result__e/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>