Dummy_Package_for_scratch_org/main/default/objects/MC_Result__e/fields/Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status__c</fullName>
    <label>Progress Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>