Dummy_Package_for_scratch_org/main/default/objects/MC_Result__e/fields/Result_Data__c.field-meta.xml
<CustomField>
    <fullName>Result_Data__c</fullName>
    <label>Result Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>