Dummy_Package_for_scratch_org/main/default/objects/MC_Result__e/fields/ResultId__c.field-meta.xml
<CustomField>
    <fullName>ResultId__c</fullName>
    <label>Result Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>